fixed some spacing issues in sections, changed thumbnail layout/functionality

--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -23,6 +23,10 @@ html {
   padding: 0;
 }
 
+ion-icon {
+  pointer-events: none;
+}
+
 body {
   background-color: $dark-blue;
   color: $blue;
